--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+
 </head>
-<body>
+<body class="testBorder">
 
   <app-root></app-root>
 </body>
