--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
 
 </head>
-<body class="testBorder">
+<body>
 
   <app-root></app-root>
 </body>
